<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF5D6"
    tools:context=".CRUD.UpdateMedia">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0E229C"
        android:gravity="center"
        android:text="@string/Titulo"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idMediaU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/mediaIdHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/mediaNameU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/mediaNameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idMediaU" />

    <EditText
        android:id="@+id/mediaDurationU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/mediaDurationHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaNameU" />

    <RadioGroup
        android:id="@+id/radioGroupU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaDurationU">

        <RadioButton
            android:id="@+id/actionGenreRadioU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actionGenreHint" />

        <RadioButton
            android:id="@+id/comedyGenreRadioU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comedyGenreHint" />

        <RadioButton
            android:id="@+id/SciFiGenreRadioU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sciFiGenreHint" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imgMediaU"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="84dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/radioGroupU"
        app:srcCompat="@android:drawable/btn_dropdown" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="470dp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:text="@string/btn_UpdateMedia"
        android:textColor="@android:color/holo_orange_light"
        app:backgroundTint="#0E229C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/btnBackUpdateU"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:text="@string/Back"
        android:textColor="@android:color/holo_orange_light"
        app:backgroundTint="#0E229C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>