<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF5D6"
    tools:context=".UserAuthentication.RegisterLogin">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0E229C"
        android:gravity="center"
        android:text="@string/Titulo"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_PassWordName_SignOn"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/et_PassWordName"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_UserName_SignOn" />

    <Button
        android:id="@+id/btn_Back_SignOn"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:text="@string/Back"
        android:textColor="@android:color/holo_orange_light"
        app:backgroundTint="#0E229C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Register_SignOn"
        app:layout_constraintVertical_bias="0.40" />

    <Button
        android:id="@+id/btn_Register_SignOn"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="75dp"
        android:text="@string/SignOn"
        android:textColor="@android:color/holo_orange_light"
        app:backgroundTint="#0E229C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_PassWordName_SignOn" />

    <EditText
        android:id="@+id/et_UserName_SignOn"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>