<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF5D6"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="355dp"
        android:layout_height="355dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.3">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="112dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_CreateMedia"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="5dp"
                android:text="@string/btn_CreateMedia"
                android:textColor="@android:color/holo_orange_light"
                app:backgroundTint="#0E229C" />

            <Button
                android:id="@+id/btn_ListMedia"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="5dp"
                android:text="@string/btn_ListMedia"
                android:textColor="@android:color/holo_orange_light"
                app:backgroundTint="#0E229C" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_UpdateMedia"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="5dp"
                android:text="@string/btn_UpdateMedia"
                android:textColor="@android:color/holo_orange_light"
                app:backgroundTint="#0E229C" />

            <Button
                android:id="@+id/btn_DeleteMedia"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="5dp"
                android:text="@string/btn_DeleteMedia"
                android:textColor="@android:color/holo_orange_light"
                app:backgroundTint="#0E229C" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0E229C"
        android:gravity="center"
        android:text="@string/Titulo"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="#0E229C"
        android:gravity="center"
        android:text="@string/tv_msg"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>