<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CRUD.DeleteMedia">

    <EditText
        android:id="@+id/idMediaD"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/mediaIdHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:text="@string/btn_DeleteMedia"
        android:textColor="@android:color/holo_orange_light"
        app:backgroundTint="#0E229C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idMediaD" />

    <Button
        android:id="@+id/btnBackDeleteD"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:text="@string/Back"
        android:textColor="@android:color/holo_orange_light"
        app:backgroundTint="#0E229C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete"
        app:layout_constraintVertical_bias="0.343" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0E229C"
        android:gravity="center"
        android:text="@string/Titulo"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>